geonetwork/manifest/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: geonetwork
spec:
  selector:
    app: geonetwork
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
